# sqlsurge

./: .gitignore  .sql-formatter.json  .sqlsurge  HOW_TO_USE_EDIT_SQL.md  a.sql  compose.yaml  init_test_data.sql  pnpm-lock.yaml  test_command_availability.md  test_edit_sql_feature.py  test_embedded_sql.py
sql-extraction/py/: package-lock.json  package.json  pyproject.toml
sql-extraction/py/pkg/: sql_extractor.py
sql-extraction/py/scripts/: build.js
sql-extraction/py/src/: index.ts  wasm_wrapper.py
sql-extraction/py/src/py/: __init__.py  sql_extractor.py
vsce/: README.md  package.json  webpack.config.js
vsce/src/: extConfig.test.ts  extConfig.ts  extension.ts  hover.ts  languageService.ts  linkedEditingRange.ts  startSqlsClient.ts
vsce/src/commands/: formatSql.ts  tempFileEditor.ts
vsce/syntaxes/: pythonRawSQL.json
