[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "straydragon", email = "straydragonl@foxmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pyodide-build>=0.30.5",
    "typing-extensions>=4.14.1",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
